[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]

authors = [
    {name='Krzysztof Kłapyta', email='krzysztof.klapyta@comarch.com'}
]
name = 'esbdeployer'
version = '0.0.5'

[project.scripts]
deployer = "deployer.main:main"
save_config_from_yaml = "deployer.main:save_config_from_yaml"
clean_configuration_per_environment = "deployer.main:clean_configuration"

[tool.setuptools]
packages = [
    "deployer"
]