[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]

authors = [
    {name='Krzysztof Kłapyta', email='krystofer02@gmail.com'}
]

name = 'esbdeployer'
version = '1.0.0'

[project.scripts]
deployer = "deployer.main:main"
save_config_from_yaml = "deployer.main:save_config_from_yaml"
clean_configuration_per_environment = "deployer.main:clean_configuration"

[tool.setuptools]
packages = [
    "deployer"
]

[project.optional-dependencies]
# to run tests.py
test = ["pytest"]
# to generate docs
# TODO: prepare docs for sphinx docs generator
docs = ["sphinx"]